# gjiten-kai

./: CMakeLists.txt  GSettings.cmake  LICENSE  MinGW.cmake  NSIS.cmake  README.md  config.h.in  gjitenkai.desktop  gjitenkai_wrapper.sh
gjitenkai/: kanjidic.utf8  radkfile.utf8  style.css  url  vconj.xml
gjitenkai/ui/: gjitenkai.ui  kanjidic.ui  worddic.ui
po/: gjitenkai.po  gjitenkai.pot  kanjidic.po  kanjidic.pot  worddic.po  worddic.pot
po/fr/: gjitenkai.mo  gjitenkai.po  kanjidic.mo  kanjidic.po  worddic.mo  worddic.po
po/ja/: gjitenkai.mo  gjitenkai.po  kanjidic.mo  kanjidic.po  worddic.mo  worddic.po
resources/: icon.rc
resources/NSIS/: NSIS.definitions.nsh.in
share/glib-2.0/schemas/: gjitenkai.gschema.xml
src/: config.h
src/gjitenkai/: callbacks.c  conf.c  conf.h  constants.h  dicfile.c  dicfile.h  dicutil.c  dicutil.h  error.c  error.h  gjitenkai.c  gjitenkai.h  main.c
src/kanjidic/: callbacks.c  conf.c  conf.h  constants.h  kanji_item.c  kanji_item.h  kanjidic.c  kanjidic.h  kanjifile.c  kanjifile.h  kanjiutils.c  kanjiutils.h  preferences.c  radical_window.c  radical_window.h
src/worddic/: callbacks.c  conf.c  conf.h  dicentry.c  dicentry.h  dicresult.c  dicresult.h  inflection.c  inflection.h  preferences.c  preferences.h  sense.c  sense.h  unit_style.h  worddic.c  worddic.h  worddic_dicfile.c  worddic_dicfile.h
src/worddic/parser/: edict.c  edict.h  jmdict.c  jmdict.h  jmnedict.c  jmnedict.h
test/: GI.c  README.md  dicfile  dicfile.c  dicfile_init_inflection.c  dicfile_search.c  dicfile_search_inflection.c  dicfile_search_stress.c  dicfile_stress.c  full2half.c  getline.c  is_jp.c  jap_point_to_lat_point.c  kanjidic_parse_line.c  parse_line.c  parse_line_stress.c  print_entry.c  print_entry.h  read_file.c  replace_radical.c
utils/: build_appimage.sh  cmake_clean_cache.sh  gsettings_keys.sh  gsettings_monitor.sh  gsettings_values.sh  reset_lang.sh  uninstall.sh
